<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    android:paddingBottom="5dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    tools:context="com.example.asus.connectfour.ConnectFour_Begin">


    <Button
        android:id="@+id/gameStartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player2Edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:background="@drawable/game_start_button_selector"
        android:onClick="ClickToGame"
        android:shadowColor="#A8A8A8"
        android:shadowRadius="5"
        android:text="@string/gameStartButton"
        android:textColor="#11114e" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView1"
        android:layout_marginTop="127dp"
        android:layout_toLeftOf="@+id/player1Edit"
        android:layout_toStartOf="@+id/player1Edit"
        android:text="@string/board_size" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/boardSizeSpin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="21dp"
        android:layout_toLeftOf="@+id/player1Edit"
        android:layout_toStartOf="@+id/player1Edit"
        android:text="@string/game_type" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="33dp"
        android:layout_toLeftOf="@+id/player1Edit"
        android:layout_toStartOf="@+id/player1Edit"
        android:text="@string/move_time" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="33dp"
        android:text="@string/player_1_name" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/player1Edit"
        android:layout_marginTop="23dp"
        android:text="@string/player_2_name"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/player1Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/gameStartButton"
        android:layout_alignStart="@+id/gameStartButton"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingEnd="23dp"
        android:paddingRight="23dp" />

    <EditText
        android:id="@+id/player2Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignEnd="@+id/player1Edit"
        android:layout_alignLeft="@+id/player1Edit"
        android:layout_alignRight="@+id/player1Edit"
        android:layout_alignStart="@+id/player1Edit"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingEnd="23dp"
        android:paddingRight="23dp"
        android:visibility="invisible" />

    <Spinner
        android:id="@+id/gameTypeSpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignEnd="@+id/boardSizeSpin"
        android:layout_alignRight="@+id/boardSizeSpin"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:entries="@array/game_Type_Items"
        android:paddingEnd="23dp"
        android:paddingRight="23dp" />

    <Spinner
        android:id="@+id/boardSizeSpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignEnd="@+id/moveTimeSpin"
        android:layout_alignLeft="@+id/moveTimeSpin"
        android:layout_alignRight="@+id/moveTimeSpin"
        android:layout_alignStart="@+id/moveTimeSpin"
        android:paddingEnd="23dp"
        android:paddingRight="23dp" />

    <Spinner
        android:id="@+id/moveTimeSpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/player1Edit"
        android:layout_alignStart="@+id/player1Edit"
        android:paddingEnd="23dp"
        android:paddingRight="23dp" />

    <Button
        android:id="@+id/help"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/help_button_selector"
        android:shadowColor="#5D57A8"
        android:text="@string/help"
        android:textSize="15dp"
        android:textColor="#FFFFFF" />

</RelativeLayout>
